# uitests

./: .gitignore  README.md  devenv.nix  mypy.ini  pyproject.toml
src/uitests/: automation.py  coordinates.py  main.py
src/uitests/tests/: test_element.py
